# dirigera_client

./: Cargo.toml  Device_Schema.json  dirigera.json  notes.md  readme.md
examples/: example_device_response.json  example_user_response.json
src/: dirigera_api.rs  lib.rs  main.rs
