[package]
name = "dirigera_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.3"
derive-getters = "0.2.1"
dotenv = "0.15.0"
oauth2 = "4.3.0"
rand = "0.8.5"
reqwest = {version = "0.11.16", features = ["default-tls"]}
serde = "1.0.160"
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = {version = "1.27.0", features = ["full"]}
